parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__string_literal_concatnation-9.snap
---
source: parser/src/parser/parser.rs
description: "f'a' 'b' 'c'"
---
Module {
    node: Node {
        start: 0,
        end: 12,
    },
    body: [
        ExpressionStatement(
            JoinedStr(
                JoinedStr {
                    node: Node {
                        start: 0,
                        end: 12,
                    },
                    values: [
                        Constant(
                            Constant {
                                node: Node {
                                    start: 2,
                                    end: 3,
                                },
                                value: "a",
                            },
                        ),
                        Constant(
                            Constant {
                                node: Node {
                                    start: 0,
                                    end: 8,
                                },
                                value: "b",
                            },
                        ),
                        Constant(
                            Constant {
                                node: Node {
                                    start: 0,
                                    end: 12,
                                },
                                value: "c",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
