parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__subscript-4.snap
---
source: parser/src/parser/parser.rs
description: "a[b, c, d]"
---
Module {
    node: Node {
        start: 0,
        end: 10,
    },
    body: [
        ExpressionStatement(
            Subscript(
                Subscript {
                    node: Node {
                        start: 0,
                        end: 10,
                    },
                    value: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    slice: Tuple(
                        Tuple {
                            node: Node {
                                start: 2,
                                end: 10,
                            },
                            elements: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 2,
                                            end: 3,
                                        },
                                        id: "b",
                                    },
                                ),
                                Name(
                                    Name {
                                        node: Node {
                                            start: 5,
                                            end: 6,
                                        },
                                        id: "c",
                                    },
                                ),
                                Name(
                                    Name {
                                        node: Node {
                                            start: 8,
                                            end: 9,
                                        },
                                        id: "d",
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ),
    ],
}
